# JACKAL_UGV

./: CMakeLists.txt  JACKAL_mpc_continuous.cpp  README.md  acados.sh  jackal_mpc_traj.rviz  package.xml
WLKATA_ARM/: README.md
acado_export_code/: symbolic_mpc.cpp
data/data1/: imu_data.csv  odom_data.csv
data_for_deepvio/: CMakeLists.txt  package.xml
data_for_deepvio/src/: syn.cpp  syn1.cpp  syn2.cpp
include/: mpc.h
jackal_nmpc/: CMakeLists.txt  package.xml
jackal_nmpc/include/: trackRefTraj.h
jackal_nmpc/launch/: ref_trajectory_tracking_jackal.launch
jackal_nmpc/params/: mpc_local_square_params.yaml
jackal_nmpc/rviz/: rviz_navigation.rviz
jackal_nmpc/script/: mpc_trajectory_generation.py
jackal_nmpc/src/: trackRefTraj.cpp  trackRefTrajNode.cpp
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/src/: drive_robot.cpp  keyboard_control.cpp  keyboard_control1.cpp
launch/: mpc.launch  odom_navigation_demo.launch  set_weight.launch  tracking_env.launch
mpc_tracking/: CMakeLists.txt
mpc_tracking/include/mpc_tracking/: mpc.h
mpc_tracking/launch/: tracking_env.launch
mpc_tracking/rviz/: mpc_tracking.rviz
mpc_tracking/src/: mpc.cpp  mpc_node.cpp  trajectory_publisher.cpp
params/: costmap_common_params.yaml
replacement_files/: Makefile  test.c
rviz/: acado.rviz  acados.rviz
scripts/: acados_ocp_nlp.json  create_ocp.py  mpc_control.py  nearest_point.py  robot_model.py  seg_point.py  solver.py
scripts/SingleIntegrator/: acados_ocp_nlp.json  closed_loop_simulation.py  create_ocp_solver_description.py  main.py  open_loop_simulation.py  robot_model.py  ros_control.py
scripts/SingleIntegrator/c_generated_code/: Makefile  acados_sim_solver_SingleIntegrator.c  acados_sim_solver_SingleIntegrator.h  acados_solver.pxd  acados_solver_SingleIntegrator.c  acados_solver_SingleIntegrator.h  main_SingleIntegrator.c  main_sim_SingleIntegrator.c
scripts/SingleIntegrator/c_generated_code/SingleIntegrator_model/: SingleIntegrator_impl_dae_fun.c  SingleIntegrator_impl_dae_fun_jac_x_xdot_u.c  SingleIntegrator_impl_dae_fun_jac_x_xdot_u_z.c  SingleIntegrator_impl_dae_fun_jac_x_xdot_z.c  SingleIntegrator_impl_dae_jac_x_xdot_u_z.c  SingleIntegrator_model.h
scripts/c_generated_code/: Makefile  acados_sim_solver_robot_model.c  acados_sim_solver_robot_model.h  acados_solver_robot_model.c  acados_solver_robot_model.h  main_robot_model.c  main_sim_robot_model.c
scripts/c_generated_code/robot_model_cost/: robot_model_cost_y_0_fun.c  robot_model_cost_y_0_fun_jac_ut_xt.c  robot_model_cost_y_0_hess.c  robot_model_cost_y_e_fun.c  robot_model_cost_y_e_fun_jac_ut_xt.c  robot_model_cost_y_e_hess.c  robot_model_cost_y_fun.c  robot_model_cost_y_fun_jac_ut_xt.c  robot_model_cost_y_hess.c
scripts/c_generated_code/robot_model_model/: robot_model_expl_ode_fun.c  robot_model_expl_vde_adj.c  robot_model_expl_vde_forw.c
src/: mocap_path_publisher.cpp  model_state_stamper.cpp  mpc_mocap_node.cpp  mpc_node.cpp  pose_transformer.cpp  syn.cpp  trajectory_publisher.cpp
